refacto#5 class refactoring