@@ -30,30 +30,32 @@ public class ContainerList {
         this.containerAreaInfo = new ObjectAreaInfo(containerInfo, new Coordinate(containerInfo.getLength() / 2, containerInfo.getWidth() / 2, containerInfo.getHeight() / 2), false);
     }
 
-    public ContainerList(@NotNull AbstractPattern pattern, Container containerInfo) {
-        this(containerInfo);
-        if (pattern != null) {
-            initializePattern(pattern);
-        }
-    }
+//    public ContainerList(@NotNull AbstractPattern pattern, Container containerInfo) {
+//        this(containerInfo);
+//        if (pattern != null) {
+//            initializePattern(pattern);
+//        }
+//    }
 
-    private void initializePattern(@NotNull AbstractPattern pattern) {
-        pattern.setCenter(new Coordinate(pattern.getTotalPatternLength() / 2, pattern.getTotalPatternWidth() / 2, pattern.getTotalPatternHeight() / 2));
-        this.patterns.add(pattern);
-        this.containerVolumeLeft -= pattern.getPatternVolume();
-        this.containerLengthLeft -= pattern.getTotalPatternLength();
-    }
+//    private void initializePattern(@NotNull AbstractPattern pattern) {
+//        var x = pattern.isRotate()? pattern.getTotalPatternWidth() : pattern.getTotalPatternLength();
+//        var y = pattern.isRotate()? pattern.getTotalPatternLength() : pattern.getTotalPatternWidth();
+//        pattern.setCenter(new Coordinate(x / 2, y / 2, pattern.getTotalPatternHeight() / 2));
+//        this.patterns.add(pattern);
+//        this.containerVolumeLeft -= pattern.getPatternVolume();
+//        this.containerLengthLeft -= x;
+//    }
 
     public boolean isSpaceLeft(@NotNull AbstractPattern pattern) {
         return containerVolumeLeft > pattern.getPatternVolume();
     }
 
-    public boolean isPatternFitInContainer(@NotNull AbstractPattern pattern) {
-        return containerInfo.getHeight() > pattern.getTotalPatternHeight() && containerInfo.getWidth() > pattern.getTotalPatternWidth();
-    }
+//    public boolean isPatternFitInContainer(@NotNull AbstractPattern pattern) {
+//        return containerInfo.getHeight() > pattern.calcActualPatternHeight() && containerInfo.getWidth() > pattern.getTotalPatternWidth();
+//    }
 
-    public boolean addPattern(@NotNull AbstractPattern pattern, boolean rotate, int index) {
-        if (!isPatternFitInContainer(pattern)) return false;
+    public void addPattern(@NotNull AbstractPattern pattern, boolean rotate, int index) {
+//        if (!isPatternFitInContainer(pattern)) return false;
 
         pattern.calcAreaEfficiency();
         adjustContainerLengthLeft(pattern, rotate, index);
@@ -64,17 +66,17 @@ public class ContainerList {
 
         this.patterns.add(pattern);
         containerVolumeLeft -= pattern.getPatternVolume();
-        return true;
+//        return true;
     }
 
     private void adjustContainerLengthLeft(AbstractPattern pattern, boolean rotate, int index) {
         if (patterns.isEmpty() || patterns.size() == 1) {
             if (index == 0) {
-                containerLengthLeft -= rotate ? pattern.getTotalPatternWidth() : pattern.getTotalPatternLength();
+                containerLengthLeft -= !rotate ? pattern.getTotalPatternWidth() : pattern.getTotalPatternLength();
             }
         } else {
             if (index == 0) {
-                containerLengthLeft -= rotate ? pattern.getTotalPatternWidth() : pattern.getTotalPatternLength();
+                containerLengthLeft -= !rotate ? pattern.getTotalPatternWidth() : pattern.getTotalPatternLength();
             }
         }
     }
@@ -88,16 +90,15 @@ public class ContainerList {
     }
 
     private void setFirstPatternPosition(@NotNull AbstractPattern pattern, boolean rotate, int index) {
-        float xStart = rotate ? (float) pattern.getTotalPatternWidth() / 2 : (float) pattern.getTotalPatternLength() / 2;
-        float increaseFactor = rotate ? pattern.getTotalPatternLength() : pattern.getTotalPatternWidth();
+        float xStart = !rotate ? (float) pattern.getTotalPatternWidth() / 2 : (float) pattern.getTotalPatternLength() / 2;
+        float increaseFactor = !rotate ? pattern.getTotalPatternLength() : pattern.getTotalPatternWidth();
         pattern.setCenter(new Coordinate((long) (xStart + index * increaseFactor), pattern.getTotalPatternWidth() / 2, pattern.getTotalPatternHeight() / 2));
         pattern.setRotate(rotate);
     }
 
     private void setSubsequentPatternPosition(@NotNull AbstractPattern pattern, boolean rotate, int index) {
         int numOfPatternsInWidth = (int) (containerInfo.getWidth() / pattern.getTotalPatternWidth());
-        AbstractPattern lastPattern = patterns.get(patterns.size() - 1);
-
+        AbstractPattern lastPattern = patterns.getLast();
         if (index == 0) {
             lastPattern = patterns.get(patterns.size() - numOfPatternsInWidth);
             pattern.setCenter(new Coordinate(lastPattern.getCenter().getX(), lastPattern.getCenter().getY() + pattern.getTotalPatternLength(), lastPattern.getCenter().getZ()));
@@ -108,7 +109,7 @@ public class ContainerList {
     }
 
     public boolean isLengthLeft(@NotNull AbstractPattern pattern) {
-        return pattern.isRotate() ? containerLengthLeft >= pattern.getTotalPatternWidth() : containerLengthLeft >= pattern.getTotalPatternLength();
+        return !pattern.isRotate() ? containerLengthLeft >= pattern.getTotalPatternWidth() : containerLengthLeft >= pattern.getTotalPatternLength();
     }
 
     public float calcAreaEfficiency() {
